fixed spacing of section h2 and changed font size for p element

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -31,6 +31,7 @@
   
   p {
     margin: 0;
+    font-size: 23px;
   }
   
   /* Header Styles */
@@ -91,7 +92,7 @@
   section h2 {
     font-size: 2.5rem;
     margin-bottom: 20px;
-    text-align: center;
+    align-self: flex-start;
     color: var(--primary);
   }
   
